-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1
-
Fix Version/s: 10.1.21
-
Component/s: Partitioning
-
Labels:
The following test case fails on Launchpad ArmHF builder with gcc 6.2.0:
main.partition_exchange
|
The failure is sporadic, with a different than recorded warning message
Note 1287 'YEAR(2)' is deprecated and will be removed in a future release. Please use YEAR(4) instead
|
CREATE TABLE t2 LIKE t1;
|
Warnings:
|
-Note 1287 'YEAR(2)' is deprecated and will be removed in a future release. Please use YEAR(4) instead
|
+Note 1287 'YEAR(3958951804)' is deprecated and will be removed in a future release. Please use YEAR(4) instead
|
ALTER TABLE t2 REMOVE PARTITIONING;
|
The intermittent garbage value suggests reading uninitialised memory.
- relates to
-
MDEV-11711 ArmHF EXPLAIN JSON garbage longlong values printed
-
- Closed
-