MDEV-11712: ArmHF EXPLAIN JSON garbage longlong values printed

Make sure printing with snprintf uses the correct typed parameters.